RESOLVED FIXED207817
[LFC][BFC] Fix horizontal/verticalConstraintsForAncestor in BlockFormattingContext::precomputeVerticalPositionForAncestors
https://bugs.webkit.org/show_bug.cgi?id=207817
Summary [LFC][BFC] Fix horizontal/verticalConstraintsForAncestor in BlockFormattingCo...
alan
Reported 2020-02-15 16:59:24 PST
layoutBox -> ancestor
Attachments
Patch (2.34 KB, patch)
2020-02-15 17:02 PST, alan
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2020-02-15 16:59:44 PST
alan
Comment 2 2020-02-15 17:02:28 PST
alan
Comment 3 2020-02-16 07:09:52 PST
Note You need to log in before you can comment on or make changes to this bug.