[LFC][BFC] Fix horizontal/verticalConstraintsForAncestor in BlockFormattingContext::precomputeVerticalPositionForAncestors https://bugs.webkit.org/show_bug.cgi?id=207817 <rdar://problem/59489735>

Reviewed by Antti Koivisto.

horizontalConstraintsForAncestor/verticalConstraintsForAncestor should return the constraints (containing block's content box width etc)
of the ancestor.

* layout/blockformatting/BlockFormattingContext.cpp:
(WebCore::Layout::BlockFormattingContext::precomputeVerticalPositionForAncestors):


Canonical link: https://commits.webkit.org/220775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256707 268f45cc-cd09-0410-ab3c-d52691b4dbfc